# libgammon

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  go.mod  macos-codesign.sh  setup.py
backgammon/: backgammon.c  backgammon.h
data/: tdgammon.onnx  tdgammon.pt
libgammon/: __init__.py  env.py  pybind.cpp
src/backgammon/: backgammon.c  backgammon.go  backgammon.h
src/python/: py_backgammon.cpp
src/test/: Makefile  backgammon_test.cpp  backgammon_test.py
test/: backgammon_test.cpp
